tests/paczka1/fuzzy1/26768179.err
Error in line 5: A718 A368 37,9
Error in line 12: YC27xO03 S905 52,4
Error in line 13: nRSeA S19 85,1
Error in line 16: YC27xO03 A368 52,6
Error in line 17: nRSeA A368 5,5
Error in line 24: nRSeA S905 90,5
Error in line 33: FuXjNG S19 97,0
Error in line 29: YC27xO03 A718 79,4
